Revision history for Set::Similarity

{{$NEXT}}

0.01  2016-11-20 23:10:20 CET
       - Initial release.