@@ -1,6 +1,8 @@
 Revision history for Set::Similarity
 
 {{$NEXT}}
+       - dependency 'parent'
+       - doc improvement
 
 0.01  2016-11-20 23:10:20 CET
        - Initial release.
